# BankSystemWithRUP

./: .gitignore  README.md  RUP_0_Iteration_Plan.dot  RUP_1_Software_Development_Plan.dot  RUP_2_1_Glossary.doc  RUP_2_2_Use_Case_Model_Survey(使用UseCase).dot
BankSystem/: .gitignore  BankSystem.pro  CMakeLists.txt  crontab  qzxing
BankSystem/src/: CMakeLists.txt  DIalogChangePasswd.cpp  DIalogChangePasswd.h  common_const.h  databaseutils.cpp  databaseutils.h  depositwidget.cpp  depositwidget.h  dialogadddeposit.cpp  dialogadddeposit.h  dialoganaly.cpp  dialoganaly.h  dialogpaycreditcard.cpp  dialogpaycreditcard.h  dialogpeople.cpp  dialogpeople.h  dialogrecord.cpp  dialogrecord.h  dialogsyslogin.cpp  dialogsyslogin.h  dialogtransfer.cpp  dialogtransfer.h  main.cpp  mainwindow.cpp  mainwindow.h  openaccount.cpp  openaccount.h  systemwidget.cpp  systemwidget.h  widgetcreditcard.cpp  widgetcreditcard.h  widgetonlinebank.cpp  widgetonlinebank.h
Model/: model.mdj
Model/bouml/: 110.session  128110  128110.diagram  128110_110.d  128238  128238.diagram  128238_110.d  128366  141294.diagram  141294_110.d  141422.diagram  141422_110.d  141678.diagram  141678_110.d  148206.diagram  148206_110.d  148718.diagram  148846.diagram  148974.diagram  149102.diagram  149230.diagram  149358.diagram  149486.diagram  156014.diagram  bouml.prj
QZXingLive/: QZXingLive.pro  creditctrl.cpp  creditctrl.h  main.cpp  main.qml
QZXingLive/android/: gradle.properties  gradle.properties~
Word/精化阶段/: RUP_0_Iteration_Plan.doc  RUP_1_Software_Development_Plan.doc  RUP_4_1_Test_Plan.doc  测试报告.doc  (+5 more)
(+165 files in other folders)
